esercizio corretto con bonus-2

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <!--/Link foglio di stile CSS-->
 </head>
 <body>
-    <h1>FizzBuzz</h1>
-    <div></div>
-    <ul class="list">
-
-    </ul>
+    <h1>FizzBuzzDOM</h1>
+    <div id="table"></div>
 
  <!--Link JavaScript-->    
 <script src="js/main.js"></script>
